trine_stage1.h


/* Lens weights for comparison (same semantics as trine_lens_t) */
typedef struct {
    float weights[TRINE_S1_CHAINS];
} trine_s1_lens_t;

/* Configuration for dedup operations */
typedef struct {
    float threshold;           /* Cosine threshold for "duplicate" (0.0-1.0) */
    trine_s1_lens_t lens;      /* Which lens to use for comparison */
    int calibrate_length;      /* 1 = apply length-aware calibration */
} trine_s1_config_t;

/* Result of a single dedup check */
typedef struct {
    int is_duplicate;          /* 1 if similarity >= threshold */
    float similarity;          /* Raw lens-weighted cosine */
    float calibrated;          /* Length-calibrated score (if enabled) */
    int matched_index;         /* Index of best match (for batch), -1 if none */
} trine_s1_result_t;


/* In-memory embedding index for batch dedup */
typedef struct trine_s1_index trine_s1_index_t;


/* ═══════════════════════════════════════════════════════════════════════
 * Encoding API
 * ═══════════════════════════════════════════════════════════════════════ */

/* Encode text directly to a 240-byte shingle embedding.
 * This is a convenience wrapper — no model file needed.
 * Returns 0 on success. */
int trine_s1_encode(const char *text, size_t len, uint8_t out[240]);


/* Batch encode: encode N texts at once.
 * texts[i] points to text, lens[i] is the length.
 * out must be pre-allocated: N * 240 bytes.
 * Returns 0 on success. */
int trine_s1_encode_batch(const char **texts, const size_t *lens,
                           int count, uint8_t *out);


/* ═══════════════════════════════════════════════════════════════════════
 * Comparison API
 * ═══════════════════════════════════════════════════════════════════════ */

/* Compare two 240-byte embeddings with lens weighting.
 * Returns lens-weighted cosine similarity (0.0-1.0), or -1.0 on error. */
float trine_s1_compare(const uint8_t a[240], const uint8_t b[240],
                        const trine_s1_lens_t *lens);


/* Full dedup check: encode + compare + threshold + calibration. */
trine_s1_result_t trine_s1_check(const uint8_t candidate[240],
                                  const uint8_t reference[240],
                                  const trine_s1_config_t *config);


/* Batch compare: compare one candidate against N references.
 * Returns the index of the best match, or -1 if none above threshold.
 * If best_sim is non-NULL, writes the best similarity score. */
int trine_s1_compare_batch(const uint8_t candidate[240],
                            const uint8_t *refs, int ref_count,
                            const trine_s1_config_t *config,
                            float *best_sim);


/* ═══════════════════════════════════════════════════════════════════════
 * Index API (in-memory, for batch dedup)
 * ═══════════════════════════════════════════════════════════════════════ */

/* Create an empty index. Returns NULL on allocation failure. */
trine_s1_index_t *trine_s1_index_create(const trine_s1_config_t *config);


/* Add an embedding to the index. Returns the assigned index (0-based).
 * Returns -1 on allocation failure. Optional metadata tag (can be NULL). */
int trine_s1_index_add(trine_s1_index_t *idx, const uint8_t emb[240],
                        const char *tag);


/* Query: find best match in the index for a candidate.
 * Returns result with matched_index set to best match (-1 if no match above threshold). */
trine_s1_result_t trine_s1_index_query(const trine_s1_index_t *idx,
                                        const uint8_t candidate[240]);


/* Get the number of entries in the index. */
int trine_s1_index_count(const trine_s1_index_t *idx);


/* Get the tag for an entry (may be NULL). */
const char *trine_s1_index_tag(const trine_s1_index_t *idx, int index);


/* Free the index and all entries. */
void trine_s1_index_free(trine_s1_index_t *idx);


/* Save index to binary file. Format (v2):
 *   Magic:        "TRS1" (4 bytes)
 *   Version:      uint32_t = 2
 *   Endian check: uint32_t = 0x01020304 (byte order marker)
 *   Flags:        uint32_t = 0 (reserved for future use)
 *   Checksum:     uint64_t = FNV-1a over payload after header
 *   --- payload ---
 *   Count:        uint32_t
 *   Config:       threshold (float), lens weights (4 floats), calibrate_length (int32)
 *   For each entry:
 *     Embedding: 240 bytes (unpacked trits)
 *     Tag len:   uint32_t (0 if no tag)
 *     Tag:       tag_len bytes (no null terminator)
 *
 * v1 files (without endian/flags/checksum) are still loadable.
 * Returns 0 on success, -1 on error. */
int trine_s1_index_save(const trine_s1_index_t *idx, const char *path);


/* Load index from binary file. Creates a new index.
 * Returns NULL on error (message printed to stderr). */
trine_s1_index_t *trine_s1_index_load(const char *path);


/* ═══════════════════════════════════════════════════════════════════════
 * Packed Trit Storage (5 trits/byte, 240 → 48 bytes)
 * ═══════════════════════════════════════════════════════════════════════ */

/* Pack 240 trits into 48 bytes. Each byte encodes 5 trits as:
 * byte = t0 + t1*3 + t2*9 + t3*27 + t4*81  (range 0-242)
 * Returns 0 on success. */
int trine_s1_pack(const uint8_t trits[240], uint8_t packed[48]);


/* Unpack 48 bytes back to 240 trits. Returns 0 on success. */
int trine_s1_unpack(const uint8_t packed[48], uint8_t trits[240]);