src/index/trine_route.h



typedef struct {
    int candidates_checked;    /* How many full comparisons were done */
    int total_entries;         /* Total entries in the index */
    float candidate_ratio;    /* candidates_checked / total_entries */
    float speedup;            /* total_entries / candidates_checked */
    const char *recall_mode;  /* Name of active recall preset (or NULL) */
} trine_route_stats_t;